--- a/popup.html
+++ b/popup.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Yu-Gi-Oh! Draw Probability Tool</title>
 </head>
+
 <body>
     <div class="logo"></div>
-    <div class="population-size">
-        <div class="quest"></div>
-        <input type="number" name="value" min="40" max="60">
-    </div>
-    <div class="number-successes-population">
-        <div class="quest"></div>
-        <input type="number" name="value" min="1" max="3">
-    </div>
-    <div class="number-successes-sample">
-        <div class="quest"></div>
-        <input type="number" name="value" min="5" max="6">
-    </div>
-    <div class="result-zero"></div>
-    <div class="result-one"></div>
-    <div class="result-two"></div>
-    <div class="result-three"></div>
-<script src="app.js"></script>
+    <section class="main">
+        <form>
+            <div class="-spopulationize">
+                <div class="quest1"></div>
+                <input type="number" name="spopulationize" min="40" max="60" pattern="[4-5][0-9]|60" required>
+            </div>
+            <div class="number-successes-population">
+                <div class="quest2"></div>
+                <input type="number" name="number-successes-population" min="1" max="3" required>
+            </div>
+            <div class="number-successes-sample">
+                <div class="quest3"></div>
+                <select name="start-order" required>
+                    <option value="select">Seleziona</option>
+                    <option value="primo">Primo</option>
+                    <option value="secondo">Secondo</option>
+                </select>
+            </div>
+            <button class="calculate" type="submit"></button>
+        </form>
+        <div class="result-zero display-none"></div>
+        <div class="result-one display-none"></div>
+        <div class="result-two display-none"></div>
+        <div class="result-three display-none"></div>
+    </section>
+    <script src="app.js"></script>
 </body>
+
 </html>
