--- a/popup.html
+++ b/popup.html
@@ -12,29 +12,29 @@
 <body>
     <div class="logo"></div>
     <section class="main">
-        <form>
-            <div class="-spopulationize">
-                <div class="quest1"></div>
-                <input type="number" name="spopulationize" min="40" max="60" pattern="[4-5][0-9]|60" required>
-            </div>
-            <div class="number-successes-population">
-                <div class="quest2"></div>
-                <input type="number" name="number-successes-population" min="1" max="3" required>
-            </div>
-            <div class="number-successes-sample">
-                <div class="quest3"></div>
-                <select name="start-order" required>
-                    <option value="select">Seleziona</option>
-                    <option value="primo">Primo</option>
-                    <option value="secondo">Secondo</option>
-                </select>
-            </div>
-            <button class="calculate" type="submit"></button>
-        </form>
-        <div class="result-zero display-none"></div>
-        <div class="result-one display-none"></div>
-        <div class="result-two display-none"></div>
-        <div class="result-three display-none"></div>
+        <div class="-spopulationize">
+            <div class="quest1"></div>
+            <input class="input1" type="number" name="spopulationize" min="40" max="60" pattern="[4-5][0-9]|60"
+                required>
+        </div>
+        <div class="number-successes-population">
+            <div class="quest2"></div>
+            <input class="input2" type="number" name="number-successes-population" min="1" max="3" required>
+        </div>
+        <div class="number-successes-sample">
+            <div class="quest3"></div>
+            <input class="input3" type="number" name="number-successes-population" min="1" max="3" required>
+        </div>
+        <div class="size">
+            <div class="quest4"></div>
+            <select class="input4" name="start-order" required>
+                <option value="select">Seleziona</option>
+                <option value="primo">Primo</option>
+                <option value="secondo">Secondo</option>
+            </select>
+        </div>
+        <button type="submit" class="calculate"></button>
+        <div class="result"></div>
     </section>
     <script src="app.js"></script>
 </body>
