--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,9 @@
                 </select>
             </div>
         </form>
-        <button type="submit" class="calculate"></button>
+        <button type="submit" class="calculate">Calcola probabilità</button>
+        <button type="reset" class="reset-btn">Reset</button>
+    
         <div class="result"></div>
     </section>
     <script src="app.js"></script>
