--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Yu-Gi-Oh! Draw Probability Tool</title>
 </head>
-
 <body>
     <div class="logo"></div>
     <section class="main">
@@ -38,9 +37,8 @@
         <button type="reset" class="reset-btn">Reset</button>
     
         <div class="result"></div>
+        <div class="error-msg"></div>
     </section>
     <script src="app.js"></script>
 </body>
-
-
 </html>
