add calc combo more cards

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <title>Yu-Gi-Oh! Draw Probability Tool</title>
 </head>
+
 <body>
     <div class="logo"></div>
     <section class="main">
@@ -35,10 +39,11 @@
         </form>
         <button type="submit" class="calculate">Calcola probabilità</button>
         <button type="reset" class="reset-btn">Reset</button>
-    
+
         <div class="result"></div>
         <div class="error-msg"></div>
     </section>
     <script src="app.js"></script>
 </body>
+
 </html>
